--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
     <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   </head>
   <body>
     <div class="container" id="app">
@@ -15,6 +16,9 @@
           <div class="input-group-text">URL:</div>
         </div>
         <input v-model="url" type="text" class="form-control" id="url" placeholder="URL">
+        <div class="input-group-append">
+          <a href="#/halve/index.json" class="btn btn-primary"><span class="fas fa-home"></span></a>
+        </div>
       </div>
 
       <halve-api-display class="mb-5"
